update game resources

--- a/assets/locales/dialogs/hillburrow/mercenary-boss.en.json
+++ b/assets/locales/dialogs/hillburrow/mercenary-boss.en.json
@@ -5,10 +5,12 @@
             "about-npc-provoke": "Heh. You don't look so tough to me.",
             "ask-about-npc": "Hi. I'm {{name}}. What's your name ?",
             "ask-about-sabotage": "I see. Can you tell me more about these incidents ?",
+            "ask-about-sabotages": "Bitty Potiok told me to ask you about the sabotages.",
             "ask-about-sheriff-murder": "I have some questions about the murder of Scratchy Lead, if you don't mind answering them.",
             "back-to-entry": "Let's talk about something else.",
             "entry": "What's up ?",
             "exit-entry": "Nothing. See you later.",
+            "fight/entry": "Careful there. My ponies are watching. I can't have you walk all over my dick and not make a show of authority, get it ?",
             "quest-seriff-murder-ask-suspicions": "Do you know anybody that would've had a reason to get rid of him ?",
             "quest-seriff-murder-exit": "That'll be all. Thank you for your cooperation.",
             "quest-sheriff-murder": "Scratchy Lead's murder ? Good riddance. That old fool was useless. Sitting on his ass all day long, never solved a crime in his career... good to know he isn't wasting the air he used to be breathing anymore.",
@@ -18,7 +20,8 @@
             "quest-sheriff-murder-confront": "Is that why you killed him ?",
             "quest-sheriff-murder-on-confront": "Ha ! I see you're just as bad a detective as he was ! No, I didn't murder that pony. It would've been a waste of my time.",
             "quest-sheriff-murder-sabotage": "I could. But you'd better talk to Bitty about that. She's probably in her office right now. It's on the other side of the hallway.",
-            "quest-sheriff-suspicions": "Can't say that I do. Maybe some criminal could've done it, if they believed he could've been a threat to their business. But as I've said before, Scratchy Lead was a shitty sheriff, he wouldn't have been a threat to a criminal even if he had been able to sniff one out... which he wasn't."
+            "quest-sheriff-suspicions": "Can't say that I do. Maybe some criminal could've done it, if they believed he could've been a threat to their business. But as I've said before, Scratchy Lead was a shitty sheriff, he wouldn't have been a threat to a criminal even if he had been able to sniff one out... which he wasn't.",
+            "sabotage/entry": "Eh... I don't know much, to be fair. I don't know what Bitty expects. My ponies and I, we're warriors. We don't solve crime. I could find a hundred of ways to rip you apart limb by limb, but when it comes to solving some kind of crappy mystery, I don't even know where to start !"
         }
     }
 }
