--- a/assets/locales/dialogs/hillburrow/potiok-boss.en.json
+++ b/assets/locales/dialogs/hillburrow/potiok-boss.en.json
@@ -1,16 +1,46 @@
 {
     "dialogs": {
         "hillburrow/potiok-boss": {
+            "about-sabotage-motives": "Who could want to harm this exploitation ?",
+            "about-sabotage-pointers": "Where can I find more intel on the arsonist ?",
+            "accept-errand-quest": "Understood. I'll make sure to get those slaves for you.",
+            "accept-sabotage-quest": "I'll find the culprit, Miss Potiok.",
+            "ask-about-errand-money": "I can't believe that they would just send you slave without getting paid. How much are you willing to spend ?",
             "ask-about-errand-quest": "Sure thing.",
-            "give-errand-quest": "Let me explain the situation. I'm in charge of running this town's coal mine. But I'm mainly working with a bunch of lazy pricks, and it hasn't been easy increasing the mine's output with this kind of workforce. So I want you to go to the slave guild at Crystal Den, and tell them to send a dozen of more capable slaves. Not the half-dead ones, not the elderly, and definitely not the fucking ghouls. I want young, virgorous ponies, who can actually hold their picks and move the earth around for that damn coal. If they disagree, remind them that the Potiok family owns Crystal Den. Think you can remember all that ?",
+            "ask-slaves-errand-refund": "They wouldn't give away the slaves for free. I had to pay for them.",
+            "entry": "{{name}} ! You're back. Good. I've got some work for you to do.",
+            "entry-accept-new-quest": "I'm at your service, Miss Potiok.",
+            "entry-accept-new-quest-for-money": "I might be able to help... if it pays well enough.",
+            "entry-exit": "I don't have time for this right now. Goodbye.",
+            "give-errand-quest": "Let me explain the situation. I'm in charge of running this town's coal mine. But I'm mainly working with a bunch of lazy pricks, and it hasn't been easy increasing the mine's output with this kind of workforce. So I want you to go to the slave guild at Crystal Den, and tell them to send a dozen of more capable slaves. Not the half-dead ones, not the elderly, and definitely not the fucking ghouls. I want young, vigorous ponies, who can actually hold their picks and move the earth around for that damn coal. If they disagree, remind them that the Potiok family owns Crystal Den. Think you can remember all that ?",
             "introduction": "Yes ? Who are you and why did you let yourself into my office ?",
-            "introduction-chase-away": "You're right. Where are my manners ? My name is {{npc}}. You're in my office. This is the place I run. People here to whatever I ask them. Wanna see how it works ?<br/><br/><i>He yells towards the door:</i> Guards ! Get this fucking clown out of my sight !<br/><i>A bunch of tough looking ponies come in, grab you and start dragging you out.",
+            "introduction-chase-away": "You're right. Where are my manners ? My name is {{npc}}. You're in my office. This is the place I run. People here do whatever I ask them. Wanna see how it works ?<br/><br/><i>He yells towards the door:</i> Guards ! Get this fucking clown out of my sight !<br/><i>A bunch of tough looking ponies come in, grab you and start dragging you out.",
             "introduction-confused": "I'm {{name}}. I was just wondering what this building was and who you people were.",
             "introduction-explanations": "I'd advise you to avoid doing that in the future. You could've been in serious trouble... but you caught me in a good mood. It's nice meeting you, {{name}}. You're in the Potiok Hillburrow's headquarters. The Potiok is the most powerful family in the crystal wastes, and I'm one of them. The name's {{npc}}. I'm in charge of this place. Say, would you be intersted in performing a small task for me ? As a way to introduce yourself to the family.",
             "introduction-give-work": "Well, it's nice meeting you {{name}}. I'm {{npc}}. So you'd like to work for me ? You  came in just at the right time. I could use the help of someone like you. I need you to run an errand for me. It doesn't sound like much, I know, but if you prove trustworthy, I'll be sure to give you responsabilities more tuned with your abilities. How does that sound to you ?",
             "introduction-hostile": "I'm {{name}}. I'm not very famous yet, but in a few years, everypony will remember me as the one who rid the wasteland of the Potiok family. Are you ready to meet your ancestors ?",
             "introduction-polite": "My name is {{name}}, and I'm at your service if it pleases you.",
-            "introduction-rude": "Didn't your momma taught you to introduce yourself before asking somepony's name ?"
+            "introduction-rude": "Didn't your momma taught you to introduce yourself before asking somepony's name ?",
+            "on-chased-away-fight-back": "<i>Fight back: </i> Prepare to meet the goddesses, scum !",
+            "on-chased-away-let-it-happen": "<i>Shamefully let yourself get dragged out</i>",
+            "reject-errand": "I'm not available at the moment. Maybe later.",
+            "reject-errand-flipping": "That's not really my vibe. I'm in the ass-kicking department. Find someone else.",
+            "sabotage/entry": "Somepony's been shitting down my neck for too long, and I need you to get rid of them. There's been a few... explosions, lately, at the mine. It destroys some of our mining equipment, and sometimes it even kill some of our slaves... we can't afford to let it happen again. I need you to find who's behind this and bring them to me.",
+            "sabotage/more-intel": "We don't know much. Talk to the chief of the guards, Apathy Flake. He usually hangs out in the lobby on the other side of this building. He's been in charge of this issue until now... I'm hoping you can do better than him.",
+            "sabotage/motives": "A bunch of people come to mind... my brother Rewan would probably like this exploitation to fail, so he can make me look bad and take over my responsabilities. The old inhabitants of Hillburrow could seek vengeance over us, as we did take the mine from their hooves. Plus anyone who would want to hurt the Potioks. This coal from this mine is what makes Cristal Den an oasis of comfort in the middle of the wastes, and the Potioks are the rulers of Cristal Den: sabotaging this operations puts the whole family in a bad light.",
+            "slavers-errand-ask-more-money": "Miss, with all due respect, if I were to offer them such a deal, no one would get what they want. A slave fit for mining work would cost at least {{slaversErrandTargetSlaveCost}} caps. I'm sure I can negociate a price for the lot, but {{slaversErrandSlaveCost}} caps per unit won't be nearly enough.",
+            "slavers-errand-negociate-refund": "Actually, the slavers wouldn't go any lower than 500 caps per slaves. I was hoping you'd be able to cover the full cost.",
+            "slavers-errand-take-refund": "Thank you, Miss Potiok.",
+            "slavers-errand/about-money": "Us Potioks have a deal with the slavers. But I'd rather make sure no fuss is made about it... if they do ask for money, I'll pay for up to {{slaversErrandSlaveCost}} caps per slave.",
+            "slavers-errand/exit": "Alright then. Come back if you want to work for me again.",
+            "slavers-errand/price-not-upped": "I'm running a tight budget here, and the previous batch of slaves proved less productive than expected. You'll just have to convince them that they somehow already owe us the difference.",
+            "slavers-errand/price-upped": "I'm running a tight budget here. But you're right. There's no point on saving money on slaves if I end up with miners who can't mine. However, I definitely cannot afford {{slaversErrandTargetSlaveCost}} caps per slave. You'll have to negociate up to {{slaversErrandSlaveCost}}.",
+            "slavers-errand/refund": "But of course. I'll compensate for your troubles. I believe we agreed on {{slaversErrandSlaveCost}} caps per slaves ?",
+            "slavers-errand/refund-negociation-accepted": "I see. Well, what can I say kiddo, you got scammed. There's no way those slaves would cost that much money. I'll pay {{slaversErrandRefundAmount}} caps for the slaves... and, what the heck, I'll throw an extra hundred caps, for your troubles.",
+            "slavers-errand/refund-negociation-rejected": "Now, wait a moment. I never told you to spend that much caps. And while you've done us a great service, I'm not going to spend that much caps on it. I'll give you {{slaversErrandRefundAmount}}, and you won't get anything more from me.",
+            "slavers-errand/waiting-report": "Ah, you're here ! The slaver's guild came in a little before you, they delivered the slaves I asked for. I had a feeling you'd pull through. You seem like somepony reliable. I need more ponies like you around here.",
+            "slavers-errand/waiting-slaves": "Ah. You're back. And I still haven't seen any new slaves around here. I take it you haven't completed your task yet ? You do understand this is a pressing matter, right ?",
+            "slaves-errand-gift-slaves": "Being of service to the Potioks was my pleasure."
         }
     }
 }
