--- a/assets/locales/hillburrow/en.json
+++ b/assets/locales/hillburrow/en.json
@@ -1,4 +1,12 @@
 {
+  "bubbles": {
+    "hillburrow": {
+      "slave-guard-1": "Don't bother me.",
+      "slave-guard-2": "Goddesses, it's so tiring watching people work all day long...",
+      "slave-guard-3": "Get lost.",
+      "rainy-purple-talk-in-dorms": "Don't talk to me here, it's not safe. Tonight, in the dorms."
+    }
+  },
   "quests": {
     "save-drunken-master": {
       "inspect-drunken-master": "You see an old pony, unconscious, lying and bleeding on an operation table. A piece of wood is sticking out of his belly."
