--- a/assets/locales/interface.en.json
+++ b/assets/locales/interface.en.json
@@ -78,6 +78,7 @@
         "out-of-range": "Out of range.",
         "player-ko": "You passed out.",
         "poison-damage": "You take {{damage}} points of damage from the poisoning.",
+        "quest-complete": "You completed {{title}} and earned {{xp}} experience points.",
         "radiation-begin": "You've been irradiated by magical waste.",
         "radiation-over": "You are no longer irradiated.",
         "read-book": "You read a book.",
