update hillburrow and cristal-den-entrance

--- a/assets/locales/dialogs/hillburrow/potiok-boss.en.json
+++ b/assets/locales/dialogs/hillburrow/potiok-boss.en.json
@@ -25,6 +25,26 @@
             "on-chased-away-let-it-happen": "<i>Shamefully let yourself get dragged out</i>",
             "reject-errand": "I'm not available at the moment. Maybe later.",
             "reject-errand-flipping": "That's not really my vibe. I'm in the ass-kicking department. Find someone else.",
+            "sabotage-accept-reward": "Thank you, Miss Potiok.",
+            "sabotage-accept-to-warn-potioks": "It will be done, Miss Potiok.",
+            "sabotage-accusation-water-carrier": "It's Mighty Hobo, the water carrier. I found dynamite in his shack.",
+            "sabotage-accusation-wc-confession": "He confessed to me when I confronted him.",
+            "sabotage-accusation-wc-confession-bibin": "He confessed to me when I confronted him. He works for Bibin, from Cristal Den.",
+            "sabotage-accusation-wc-giveup": "I guess I'll have to investigate further. I'll be on my way !",
+            "sabotage-accusation-wc-slaver-lover": "He comes every day to give water to the slaves during their work. Maybe he's just against slavery and thought this was a good way to protest. He doesn't look like the smartest pea in the pod.",
+            "sabotage-ask-payment": "Then I think I should be rewarded accordingly.",
+            "sabotage-ask-payment-alt": "Shouldn't I get a reward for the job I just completed for you ?",
+            "sabotage-start-accusations": "I know who's responsible for the explosions in the mine.",
+            "sabotage-water-carrier-convince": "Come on... you've met Mighty Hobo before, right ? He clearly has some screws lose, it shouldn't come as a surprise that somepony like him would play with explosives.",
+            "sabotage-water-carrier-fought-back": "He tried to kill me when I pressed him for answers... I had to put him down.",
+            "sabotage-water-carrier-whereabouts": "He doesn't suspect anything. He's either carrying water, or sitting in his shed.",
+            "sabotage/about-payment": "But of course. A hundred caps should cover your expenses well enough, I assume ?",
+            "sabotage/accusation/water-carrier/abou-confession": "Did he ? It still doesn't explain why he did it though.",
+            "sabotage/accusation/water-carrier/about-bibin": "Bibin ? That filthy gangster from the slums ? That is... unexpected. Everypony knows he has beef against us Potioks, but this is rather extreme, even for him. This matter no longer only concerns me. The family must hear about this as soon as possible. I need you to go to the Potiok ranch at Cristal Den. Speak to the matriarch. They'll let you meet her if you tell them I sent you.",
+            "sabotage/accusation/water-carrier/entry": "The water carrier ? That's a bit surprising. I really don't see what he has to gain from this. And in this day and age, it's not so weird to own dyanmite.",
+            "sabotage/accusation/water-carrier/water-carrier-dead": "Damn... well, it's unlikely we would've gotten anything out of him anyway. He wasn't exactly very smart to begin with.<br>Good job. Your help isn't going unappreciated.",
+            "sabotage/accusation/water-carrier/whereabouts": "So, where is this water carrier, now ? I'll have my ponies fetch him so that I can interrogate him.",
+            "sabotage/accusations": "Wonderful ! Who was it then ? And how did you find out ?",
             "sabotage/entry": "Somepony's been shitting down my neck for too long, and I need you to get rid of them. There's been a few... explosions, lately, at the mine. It destroys some of our mining equipment, and sometimes it even kill some of our slaves... we can't afford to let it happen again. I need you to find who's behind this and bring them to me.",
             "sabotage/more-intel": "We don't know much. Talk to the chief of the guards, Apathy Flake. He usually hangs out in the lobby on the other side of this building. He's been in charge of this issue until now... I'm hoping you can do better than him.",
             "sabotage/motives": "A bunch of people come to mind... my brother Rewan would probably like this exploitation to fail, so he can make me look bad and take over my responsabilities. The old inhabitants of Hillburrow could seek vengeance over us, as we did take the mine from their hooves. Plus anyone who would want to hurt the Potioks. This coal from this mine is what makes Cristal Den an oasis of comfort in the middle of the wastes, and the Potioks are the rulers of Cristal Den: sabotaging this operations puts the whole family in a bad light.",
