adds player matches in cristal-den boxing gym

--- a/assets/locales/dialogs/cristal-den/boxing-manager.en.json
+++ b/assets/locales/dialogs/cristal-den/boxing-manager.en.json
@@ -5,6 +5,7 @@
             "ask-about-gym": "What's this place ?",
             "ask-bet": "I'd like to place a bet on the next fight.",
             "ask-join-fights": "I want to get in the ring.",
+            "avoid-fight": "I'm not ready yet, I'll come back later.",
             "bet-accepted": "Nice ! The fight will start in a minute or so. Come back afterwards if {{selectedFighterName}} wins and I'll give you your earnings.",
             "bet-earnings": "You won your last bet ! Here are your earnings.  Come back whenever you want, I'm sure you can make even more money !<br><i>He hoofs you {{betPotentialGains}} bottlecaps.</i>",
             "bets": "That's nice ! The next fight will be between {{name1}} and {{name2}}. Which one do you wanna bet on ?",
@@ -12,10 +13,19 @@
             "boxing-entry": "What is it gonna be ? Are you betting, or are you fighting ?",
             "entry-exit": "I'll be on my way.",
             "exit-bets": "I changed my mind, I won't be placing a bet.",
+            "fight": "That's great, {{ringName}} ! Your first fight will be against {{currentOpponentName}}. If you can put him down, you'll get a price of  {{nextFightWinningPrice}} bottlecaps. How does that sound ?",
+            "fight-1": "Your next opponent is {{currentOpponentName}}. He's a bit tougher than the last one, but I think you've got what it takes to bring him down. Good luck !",
+            "fight-2": "Yeah, that's what I'm talking about ! The crowd loves you, and they're hyped for the next fight ! You're going against {{currentOpponentName}} this time. Everypony expects big things from you, don't disappoint us !",
+            "fight-3": "Well, you've climbed the ladder long enough. Tonight, you'll be fighting for the title of Cristal Den Champion. You'll be going against {{currentOpponentName}}, who currently holds the title. She's a dangerous pony. Watch your step in there.",
+            "fight-champion-earnings": "What a fight ! Congratulations mate, you're the new champion of Cristal Den ! Your success story as the new challenger really impacted the crowd. You also motivated the locals to train more, the gym has more patrons than ever before ! Here, take your reward, you've earned it !<br><i>He gives you {{fightWinningPrice}} bottlecaps and a brohoof.</i>",
+            "fight-earnings": "Good job on the ring, mate ! The crowd loves you, you're making us some good money ! Here's your cut !<br><i>She gives you {{fightWinningPrice}} bottlecaps.</i>",
             "introduction": "Hey ! Welcome to the gym ! What can I do you for ?",
             "introduction-for-strong": "Holy Celestia on a bicycle ! I don't see that everyday ! With that strong build of yours, you must be here to make some money, right ? We can get you start right away ! I'll make a star out of you !",
+            "no-more-challengers": "We don't have anymore challenger to fight with. You've beaten them all, champ !",
+            "pick-ring-name": "Alright ! If you wanna enter the ring, you're gonna need a ring name ! What do you want the crowd to yell when they cheer for you ?",
+            "placeBet": "I'll bet on {{name}}.",
             "set-bet-amount": "Good choice, I'm sure ! How much do you want to bet ?",
-            "placeBet": "I'll bet on {{name}}."
+            "start-ight": "I'm ready to climb into the ring."
         }
     }
 }
