adds crowd NPCs in cristal-den-slums

--- a/assets/locales/cristal-den/ring.en.json
+++ b/assets/locales/cristal-den/ring.en.json
@@ -5,7 +5,14 @@
       "combat-introduction-2": "Tonight, {{name1}} and {{name2}} will beat each other to a pulp for your pleasure !",
       "combat-introduction-3": "Let the fight... BEGIN !",
       "combat-ending-part-0": "Wow ! What a fight have these two colosses shown us !",
-      "combat-ending-part-1": "{{name}} is declared victor by K.O. !"
+      "combat-ending-part-1": "{{name}} is declared victor by K.O. !",
+      "cheers-0": "Get them, {{name}} ! You can do it !",
+      "cheers-1": "No one can stop {{name}} ! Fuck'em up !",
+      "cheers-2": "Kill them all, {{name}} !",
+      "cheers-3": "I've got my money on you, {{name}} !",
+      "cheers-4": "{{name}} !!",
+      "cheers-5": "Get'em, {{name}} !",
+      "cheers-6": "Go get them, {{name}} !"
     }
   }
 }
