update rathian and bartender scripts

--- a/assets/locales/dialogs/cristal-den/bibin-bartender.en.json
+++ b/assets/locales/dialogs/cristal-den/bibin-bartender.en.json
@@ -1,11 +1,13 @@
 {
     "dialogs": {
         "cristal-den/bibin-bartender": {
-            "about-place/bibin": "She came from the wastes a few years ago, and ended up in the slums with us. She managed to get everypony to work together, and we made a better place out of this hole. The place used to be run by the Potioks, and we'd have to pay rent to them. But Bibin managed to get us a load of weapons, and we ran them out of this place. Their guards and tax collectors have been keeping away from the slums ever since.",
-            "about-place/entry": "Friend, you're in Bibin's place. She's a pretty influential figure in the slums, and this is the place she built for us to rest and have fun after a tough day of menial work ! Most ponies at the slums meet at this bar during the evening. We also have an underground gym, which organizes fights, later at night.",
+            "about-place/bibin": "He came from the wastes a few years ago, and ended up in the slums with us. He managed to get everypony to work together, and we made a better place out of this hole. The place used to be run by the Potioks, and we'd have to pay rent to them. But Bibin managed to get us a load of weapons, and we ran them out of this place. Their guards and tax collectors have been keeping away from the slums ever since.",
+            "about-place/bibin-meeting": "Calm your hooves, pal ! Bibin doesn't meet anypony... anymore. He has to be careful, what with the conflictual relationship with the Potioks. You can't just take an appointment either... but he'll call to you if you catch his attention. He's always eager to discuss with people with talents.",
+            "about-place/entry": "Friend, you're in Bibin's place. He's a pretty influential figure in the slums, and this is the place he built for us to rest and have fun after a tough day of menial work ! Most ponies at the slums meet at this bar during the evening. We also have an underground gym, which organizes fights, later at night.",
             "about-place/gym": "Sure thing, buddy ! The gym is underground, you can reach it through the stairs, on my right. Starting at 11pm, every night, ponies can challenge each other in the ring, and place bets on the winner. It usually lasts until around 2am.",
             "ask-about-bibin": "So, where does this Bibin came from and why's she doing all of that ?",
             "ask-about-gym": "The gym sounds interesting. Tell me more about it !",
+            "ask-about-meeting-bibin": "I'm curious. Where can I meet Bibin ?",
             "ask-about-place": "What can you tell me about this place ?",
             "ask-order-drink": "Sure, I'll have a drink !",
             "entry": "Hi, and welcome to Bibin's ! Care for a drink, pal ?",
